<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiveWallpaper2</string>
    <string name="hello_world">Hello world!</string>
    <string name="wallpaper_description">Drifting bubbles that pop on touch</string>
    <string name="pref_touch_enabled">Enable Touch</string>
    <string name="pref_themes">Theme</string>
    <string name="pref_touch_summary">Bubbles will pop and regenerate on touch</string>
    <string name="pref_shake_enabled">Enable Shake</string>
    <string name="pref_shake_summary">Bubbles will pop and regenerate if phone shaken</string>
    <string name="pref_include_border">Include Border</string>
    <string name="pref_border_summary">Display a border around foreground bubbles</string>
    <string name="pref_time_shift">Enable Time Sensor</string>
    <string name="pref_time_summary">Allow themes to change colors and hues based on time of day</string>
    

</resources>
