<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
        android:key="touch"
        android:title="@string/pref_touch_enabled"
        android:summary="@string/pref_touch_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="shake"
        android:title="@string/pref_shake_enabled"
        android:summary="@string/pref_shake_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="border"
        android:title="@string/pref_include_border"
        android:summary="@string/pref_border_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="timeshift"
        android:title="@string/pref_time_shift"
        android:summary="@string/pref_time_summary"
        android:defaultValue="true" />
    <ListPreference
        android:key="themes"
        android:title="@string/pref_themes"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_values"
        android:defaultValue="1" />
</PreferenceScreen>